<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_c2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="10"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/button_go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/go_back"
                android:layout_marginLeft="@dimen/dialog_button_back_marginLeft"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/channel_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_f1"
                android:layout_marginRight="@dimen/dialog_channel_type_marginRight"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@color/color_c5"
                android:paddingLeft="@dimen/dialog_channel_type_paddingLeftRight"
                android:paddingRight="@dimen/dialog_channel_type_paddingLeftRight"
                android:paddingTop="@dimen/dialog_channel_type_paddingTopBottom"
                android:paddingBottom="@dimen/dialog_channel_type_paddingTopBottom"
                android:gravity="center"
                android:text="@string/dialog_channel_type"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="0dp">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dialog_item_marginLeft"
                android:text="@string/dialog_port_category"
                android:textSize="@dimen/text_size_f1"
                android:textColor="@color/color_c3"
                android:layout_centerVertical="true"/>

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dialog_item_marginRight"
                android:layout_toRightOf="@id/category"
                android:layout_marginLeft="@dimen/dialog_spinner_marginLeft"
                android:background="@color/dialog_spinner_background_color"
                android:popupBackground="@color/dialog_spinner_background_color">

            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="0dp">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dialog_item_marginLeft"
                android:text="@string/dialog_port_alias"
                android:textSize="@dimen/text_size_f1"
                android:textColor="@color/color_c3"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/alias_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dialog_item_marginRight"
                android:layout_toRightOf="@id/alias"
                android:layout_marginLeft="@dimen/dialog_spinner_marginLeft"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_f3"
                android:background="@color/dialog_spinner_background_color">

            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="0dp">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dialog_item_marginLeft"
                android:text="@string/dialog_port_attribute"
                android:textSize="@dimen/text_size_f1"
                android:textColor="@color/color_c3"
                android:layout_centerVertical="true"/>

            <Spinner
                android:id="@+id/attribute_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dialog_item_marginRight"
                android:layout_toRightOf="@id/attribute"
                android:layout_marginLeft="@dimen/dialog_spinner_marginLeft"
                android:background="@color/dialog_spinner_background_color"
                android:popupBackground="@color/dialog_spinner_background_color">

            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="0dp">

        </RelativeLayout>

        <Button
            android:id="@+id/dialog_button_confirm"
            android:layout_width="match_parent"
            android:layout_weight="8"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/dialog_item_marginLeft"
            android:layout_marginRight="@dimen/dialog_item_marginRight"
            android:background="@color/color_c5"
            android:textSize="@dimen/text_size_f1"
            android:text="@string/dialog_button_confirm">

        </Button>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="8"
            android:layout_height="0dp">

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>